# bot-procman

./: CMakeLists.txt  README.md
cmake/: bot2-procman-config.cmake.in  lcmtypes.cmake  pods.cmake
cmake/modules/: FindGLib2.cmake
lcmtypes/c/lcmtypes/: bot2_procman.h  bot_procman_command2_t.c  bot_procman_command2_t.h  bot_procman_deputy_cmd2_t.c  bot_procman_deputy_cmd2_t.h  bot_procman_deputy_cmd_t.c  bot_procman_deputy_cmd_t.h  bot_procman_discovery_t.c  bot_procman_discovery_t.h  bot_procman_info2_t.c  bot_procman_info2_t.h  bot_procman_info_t.c  bot_procman_info_t.h  bot_procman_orders2_t.c  bot_procman_orders2_t.h  bot_procman_orders_t.c  bot_procman_orders_t.h  bot_procman_printf_t.c  bot_procman_printf_t.h  bot_procman_sheriff_cmd2_t.c  bot_procman_sheriff_cmd2_t.h  bot_procman_sheriff_cmd_t.c  bot_procman_sheriff_cmd_t.h
lcmtypes/cpp/lcmtypes/bot_procman/: command2_t.hpp  deputy_cmd2_t.hpp  deputy_cmd_t.hpp  discovery_t.hpp  info2_t.hpp  info_t.hpp  orders2_t.hpp  orders_t.hpp  printf_t.hpp  sheriff_cmd2_t.hpp  sheriff_cmd_t.hpp
python/: CMakeLists.txt  bot-procman-sheriff.in
python/scripts/: bot-procman-sheriff
python/src/bot_procman/: build_prefix.py
python/src/bot_procman/sheriff_gtk/: sheriff_gtk.py
src/deputy/: CMakeLists.txt
